# grammar-guide

./: .gitignore  README.md  batch_decode.py  main.py  pyproject.toml  requirements.txt  setup.py
examples/: anthropic-gg.ipynb  benchmark-example.ipynb  example.ipynb  openai-gg.ipynb  transformers-example.ipynb
examples/benchmarks/: json.ebnf  json.lark  naive_vs_gg.py  run.py
grammar_guide/: __init__.py  guide.py  typedefs.py  utils.py
grammar_guide/minEarley/: parser.py
grammar_guide/model/: logits_processors.py  modeling_utils.py
grammars/: blendsql.lark  json.ebnf  json.lark  json_five_values_string_only.lark  python.lark  sql.lark
speculative_grammar_backtracking/: _logger.py  guide.py  typedefs.py  utils.py
speculative_grammar_backtracking/model/: __init__.py  modeling_utils.py
tests/: conftest.py  test_generic.py  test_transformers.py
